Added event listeners for the buttons Added Score and Results option

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body style="background-color:#1f2937;color:white;">
   <h1> Rock Paper Scissors Game</h1>
+  <button id="rock">ROCK</button>
+  <button id="paper">PAPER</button>
+  <button id="scissors">SCISSORS</button>
   <script src="javascript.js">
   </script>
 </body>
